src/objects/UE_Related_List_Style__mdt.object
<CustomObject>
    <description>This houses the custom styles and their condition criteria for your related lists</description>
    <fields>
        <fullName>CSS_Class_Name__c</fullName>
        <description>Name of the css class in the Org_Ultra_Related_List_Styles css static resource we should assign to this column.</description>
        <inlineHelpText>Name of the css class in the Org_Ultra_Related_List_Styles css static resource we should assign to this column.</inlineHelpText>
        <label>CSS Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison_Criteria__c</fullName>
        <description>How would you like your criteria to be evaluated at run time?</description>
        <inlineHelpText>How would you like your criteria to be evaluated at run time?</inlineHelpText>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                    <default>true</default>
                    <label>less than</label>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_Value__c</fullName>
        <description>This is the value we should compare on the linked columns field to decided to apply the style.</description>
        <inlineHelpText>This is the value we should compare on the linked columns field to decided to apply the style.</inlineHelpText>
        <label>Comparison Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Compare__c</fullName>
        <description>This is a link to the column field you would like the comparison to actually take place on.</description>
        <inlineHelpText>This is a link to the column field you would like the comparison to actually take place on.</inlineHelpText>
        <label>Field To Compare</label>
        <referenceTo>UE_Related_List_Column__mdt</referenceTo>
        <relationshipLabel>UE Related List Styles (Field To Compare)</relationshipLabel>
        <relationshipName>UE_Related_List_Styles1</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>UE_Related_List_Column_Link__c</fullName>
        <description>This links your style criteria to a column</description>
        <inlineHelpText>This links your style criteria to a column</inlineHelpText>
        <label>UE Related List Column Link</label>
        <referenceTo>UE_Related_List_Column__mdt</referenceTo>
        <relationshipLabel>UE Related List Styles</relationshipLabel>
        <relationshipName>UE_Related_List_Styles</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>UE Related List Style</label>
    <pluralLabel>UE Related List Styles</pluralLabel>
</CustomObject>